Fix OpenJDK deprecation and unchecked warnings.